--- a/Compro_online_system/src/main/webapp/pages/home.xhtml
+++ b/Compro_online_system/src/main/webapp/pages/home.xhtml
@@ -4,7 +4,8 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:c="http://java.sun.com/jsp/jstl/core">
 
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -27,8 +28,14 @@
                 <td id="content">
                     <ui:insert name="content">
                         <h:form>
-                           <input type="hidden" name="userId" id="userId" value="#{userMB.id}"></input>
-                            <p:commandButton id="retrieveApplicationTemplate" value="Retrieve Application" action="#{applicationMB.retrieveApplicationTemplate}" ajax="false"/>
+                            <c:if test="#{userMB.id!=null}">
+                                <input type="hidden" name="userId" id="userId" value="#{userMB.id}"></input>
+                            </c:if> 
+                            <c:if test="#{applicationMB.userId!=null}">
+                                <input type="hidden" name="userId" id="userId" value="#{applicationMB.userId}"></input>
+                            </c:if> 
+                            
+                           <p:commandButton id="retrieveApplicationTemplate" value="Retrieve Application" action="#{applicationMB.retrieveApplicationTemplate}" ajax="false"/>
                         </h:form>
                     </ui:insert>
                 </td>
