--- a/Compro_online_system/src/main/webapp/pages/home.xhtml
+++ b/Compro_online_system/src/main/webapp/pages/home.xhtml
@@ -28,11 +28,11 @@
                 <td id="content">
                     <ui:insert name="content">
                         <h:form>
-                            <c:if test="#{userMB.id!=null}">
-                                <input type="hidden" name="userId" id="userId" value="#{userMB.id}"></input>
+                            <c:if test="#{userMB.id!=0}">
+                                <input type="text" name="userId" id="userId" value="#{userMB.id}"></input>
                             </c:if> 
-                            <c:if test="#{applicationMB.userId!=null}">
-                                <input type="hidden" name="userId" id="userId" value="#{applicationMB.userId}"></input>
+                            <c:if test="#{applicationMB.userId!=0}">
+                                <input type="text" name="userId" id="userId" value="#{applicationMB.userId}"></input>
                             </c:if> 
                             
                            <p:commandButton id="retrieveApplicationTemplate" value="Retrieve Application" action="#{applicationMB.retrieveApplicationTemplate}" ajax="false"/>
