--- a/Compro_online_system/src/main/webapp/pages/index.xhtml
+++ b/Compro_online_system/src/main/webapp/pages/index.xhtml
@@ -52,7 +52,7 @@
                                
                                 <p class="change_link">
                                    Not yet registered? 
-                                   <h:commandLink styleClass="" value="register" action="register"/>
+                                   <h:commandLink styleClass="" value="register" action="redirectToRegister"/>
                                
                                 </p>
                            </h:form>           
