--- a/Compro_online_system/src/main/webapp/pages/application.xhtml
+++ b/Compro_online_system/src/main/webapp/pages/application.xhtml
@@ -54,6 +54,9 @@
                        <td> <p:commandButton id="saveApplication" value="Save" action="#{applicationMB.saveApplication}" ajax="false"/></td>
                        <td> <p:commandButton id="submitApplication" value="Submit" action="#{applicationMB.submitApplication}" ajax="false"/></td>
                        </c:if>
+                       <c:if test="#{applicationMB.applicationForm.status =='submitted'}">
+                       <td> <p:commandButton id="requestChangeApplication" value="Change Request" action="#{applicationMB.requestChangeApplication}" ajax="false"/></td>
+                       </c:if>    
                        </tr>
                             </table>
                         </h:form>
