--- a/Compro_online_system/src/main/webapp/pages/application.xhtml
+++ b/Compro_online_system/src/main/webapp/pages/application.xhtml
@@ -8,8 +8,10 @@
       xmlns:c="http://java.sun.com/jsp/jstl/core">
 
     <h:head>
+        <script type="text/javascript" src="./../resources/css/prototype.js"></script>  
+        <script type="text/javascript" src="./../resources/css/calendarview.js"></script>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-
+        <link href="./../resources/css/calendarview.css" rel="stylesheet" type="text/css" />
         <title>Welcome to Compro online application</title>
     </h:head>
 
@@ -29,7 +31,8 @@
                                 <div id="application" class="animate form">
                                     <h:form>  
                                         <h1>Application Form</h1>
-                                        <input type="hidden" name="userId" id="userId" value="#{applicationMB.userId}"></input>
+                                        <input type="text" name="userId" id="userId" value="#{applicationMB.userId}"></input>
+                                        <input type="text" name="auserId" id="auserId" value="#{applicationMB.userId}"></input>
                                         ${applicationMB.applicationTemplate.sections.size()}
                                         <c:forEach var="section" items="${applicationMB.applicationTemplate.sections}">
                                             <c:if test="#{section.id=='1'}">
@@ -44,6 +47,32 @@
                                                             <c:if test="#{field.type=='string'}">
                                                                 <input type="text" style="height: 30px;" name="#{field.id}" id="#{field.id}"  value="#{applicationMB.applicationForm.fieldsValues.get(field.id)}" label="#{field.name}" ></input>
                                                             </c:if>
+                                                            <c:if test="#{field.type=='date'}">
+                                                            <script type="text/javascript">
+                                                              window.onload = function() {
+                                                                Calendar.setup({
+                                                                  dateField      : '#{field.id}',
+                                                                  triggerElement : 'calendarButton'
+                                                                })
+                                                              }
+                                                            </script>
+                                                        <input type="text" name="#{field.id}" id="#{field.id}" value="#{applicationMB.applicationForm.fieldsValues.get(field.id)}" readonly="readonly"/>
+                                                        <input type="button" id="calendarButton" value="Show Calendar" />
+                                                         </c:if>
+                                     <c:if test="#{field.type=='list'}">
+                                         <select name="#{field.id}" id="#{field.id}" value="c2">  
+                                             <option value=""></option>
+                                             
+                                             <c:forEach var="choices" items="${field.choices}">
+                                                 <c:if test="#{applicationMB.applicationForm.fieldsValues.get(field.id)==choices}">
+                                                    <option value="#{choices}" selected="selected">#{choices}</option>
+                                                 </c:if>
+                                                 <c:if test="#{applicationMB.applicationForm.fieldsValues.get(field.id)!=choices}">
+                                                 <option value="#{choices}" >#{choices}</option>  
+                                                 </c:if>
+                                             </c:forEach>
+                                         </select> 
+                                     </c:if>
                                                         </p>
                                                     </c:forEach>                                 
                                                     <a href="##{section.id}" class="to_register">Next</a>
@@ -61,6 +90,32 @@
                                                             <c:if test="#{field.type=='string'}">
                                                                 <input type="text" name="#{field.id}" id="#{field.id}"  value="#{applicationMB.applicationForm.fieldsValues.get(field.id)}" label="#{field.name}" ></input>
                                                             </c:if>
+                                                            <c:if test="#{field.type=='date'}">
+                                                                <script type="text/javascript">
+                                                                  window.onload = function() {
+                                                                    Calendar.setup({
+                                                                      dateField      : '#{field.id}',
+                                                                      triggerElement : 'calendarButton'
+                                                                    })
+                                                                  }
+                                                                </script>
+                                                                  <input type="text" name="#{field.id}" id="#{field.id}" value="#{applicationMB.applicationForm.fieldsValues.get(field.id)}" readonly="readonly"/>
+                                                                  <input type="button" id="calendarButton" value="Show Calendar" />
+                                                                   </c:if>
+                                                                   <c:if test="#{field.type=='list'}">
+                                                                       <select name="#{field.id}" id="#{field.id}" value="c2">  
+                                                                           <option value=""></option>
+
+                                                                           <c:forEach var="choices" items="${field.choices}">
+                                                                               <c:if test="#{applicationMB.applicationForm.fieldsValues.get(field.id)==choices}">
+                                                                                  <option value="#{choices}" selected="selected">#{choices}</option>
+                                                                               </c:if>
+                                                                               <c:if test="#{applicationMB.applicationForm.fieldsValues.get(field.id)!=choices}">
+                                                                               <option value="#{choices}" >#{choices}</option>  
+                                                                               </c:if>
+                                                                           </c:forEach>
+                                                                       </select> 
+                                                                   </c:if>
                                                         </p>
                                                     </c:forEach>                                 
                                                     <a href="#toregister" class="to_register">Next</a>
