--- a/Compro_online_system/src/main/webapp/pages/error.xhtml
+++ b/Compro_online_system/src/main/webapp/pages/error.xhtml
@@ -1,13 +1,29 @@
 <html xmlns="http://www.w3.org/1999/xhtml"  
      xmlns:h="http://java.sun.com/jsf/html" 
      xmlns:f="http://java.sun.com/jsf/core" 
-     xmlns:p="http://primefaces.org/ui">  
+     xmlns:p="http://primefaces.org/ui"
+     xmlns:c="http://java.sun.com/jsp/jstl/core">  
    
  <h:head><title>Welcome to Compro online application</title></h:head>  
  <body>  
  <f:view>  
      <h:form>  
-         <h:outputText value="Transaction Error has occurred!"></h:outputText>  
+         <c:if test="#{userMB.message=='register'}">
+             <h2><h:outputText value="User already exists!"></h:outputText> </h2> 
+             <p:commandButton id="back" value="Back" action="register" ajax="false"/>
+         </c:if>
+         <c:if test="#{userMB.message=='login'}">
+             <h2><h:outputText value="Login failed!"></h:outputText> </h2> 
+             <p:commandButton id="back" value="Back" action="index" ajax="false"/>
+         </c:if>
+         <c:if test="#{userMB.message=='change password'}">
+             <h2><h:outputText value="Can not change password!"></h:outputText> </h2> 
+             <p:commandButton id="back" value="Back" action="account" ajax="false"/>
+         </c:if>
+         <c:if test="#{userMB.message=='forgot password'}">
+             <h2><h:outputText value="Can not change password!"></h:outputText> </h2> 
+             <p:commandButton id="back" value="Back" action="index" ajax="false"/>
+         </c:if>
      </h:form>  
  </f:view>  
 </body>    
