Remove schema name from queries

--- a/Compro_online_system/src/main/webapp/pages/ChangeApplicationDisposition.xhtml
+++ b/Compro_online_system/src/main/webapp/pages/ChangeApplicationDisposition.xhtml
@@ -26,7 +26,7 @@ and open the template in the editor.
              <div id="container_demo" >
                   <div id="wrapper">
                               <h:form>
-                              <p class="logout" style="padding: 0px 33  0px 20px;">
+                              <p class="logout" style="padding: 0px 330px 20px;">
                                   <h:commandLink value="Search" action="SearchApplication"/>
                                  <h:commandLink value="Logout" action="#{userMB.logOut()}"/>
                                  
